# sdl2_alpha

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  MANIFEST.in  Makefile  README.md  blendy.pyi  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: lib.rs
tests/: conftest.py  test_alpha_correctness.py  test_performance.py
