[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sdl2_alpha"
description = "Fast, correct alpha blending for SDL2 surfaces"
readme = "README.md"
authors = [
    {name = "Justin DuJardin", email = "justin@dujardinconsulting.com"}
]
include = ["sdl2_alpha.pyi"]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]



[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pillow>=8.0",  # For reference image generation in tests
    "numpy>=1.20",  # For numerical comparisons
]

[tool.maturin]
features = ["pyo3/extension-module"]